traefik_v2.0/ds.yaml
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  namespace: kube-system
  name: traefik-ingress
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --api.insecure
            - --accesslog
            - --accesslog.filepath=/var/log/traefik_access.log
            - --log
            - --log.filepath=/var/log/traefik.log
            - --serverstransport.insecureskipverify=true
            - --providers.kubernetescrd.endpoint=https://10.4.7.10:7443
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --providers.kubernetescrd
            #- --certificatesresolvers.default.acme.tlschallenge
            #- --certificatesresolvers.default.acme.email=foo@you.com
            #- --certificatesresolvers.default.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            #- --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              hostPort: 81
              containerPort: 8000
            - name: websecure
              hostPort: 43
              containerPort: 4443
            - name: admin
              containerPort: 8080
